[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/btree/Editor/task/task.gd" type="Script" id=1]

[node name="task" type="GraphNode"]
offset_right = 127.0
offset_bottom = 85.0
tooltip_text = "execute the function in tree order. the function name must begin with \"task_\" and accept one argument"
mouse_filter = 1
title = "task"
show_close = true
resizable = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color( 0, 0, 1, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 0, 0, 1, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color( 1, 1, 1, 1 )
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )

[node name="Main" type="VBoxContainer" parent="."]
offset_left = 16.0
offset_top = 24.0
offset_right = 170.0
offset_bottom = 44.0

[node name="Required" type="HBoxContainer" parent="Main"]
offset_right = 154.0
offset_bottom = 20.0
custom_minimum_size = Vector2( 0, 20 )

[node name="Label" type="Label" parent="Main/Required"]
offset_top = 3.0
offset_right = 109.0
offset_bottom = 17.0
text = "Function Name : "

[node name="opt_function" type="OptionButton" parent="Main/Required"]
offset_left = 113.0
offset_right = 154.0
offset_bottom = 20.0

[node name="Input" type="HBoxContainer" parent="."]
offset_left = 16.0
offset_top = 44.0
offset_right = 170.0
offset_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Input"]
offset_top = 3.0
offset_right = 78.0
offset_bottom = 17.0
size_flags_horizontal = 0
text = "Parameter : "

[node name="Add" type="Button" parent="Input"]
offset_left = 82.0
offset_right = 102.0
offset_bottom = 20.0
size_flags_horizontal = 9
text = "+"

[node name="Params" type="VBoxContainer" parent="."]
offset_left = 16.0
offset_top = 65.0
offset_right = 170.0
offset_bottom = 65.0
[connection signal="delete_request" from="." to="." method="_on_GraphNode_close_request"]
[connection signal="resize_request" from="." to="." method="_on_GraphNode_resize_request"]
[connection signal="pressed" from="Input/Add" to="." method="_on_Add_pressed"]
